--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,14 @@ python:
   - "2.7"
 before_install:
   - sudo apt-get update
+  - sudo apt-get upgrade
 install:
-  - sudo apt-get install python-dev build-essential python-dbus python-gst0.10
+  - sudo apt-get install python-dev build-essential python-dbus python-gst0.10 postgresql-server-dev-9.3 postgresql-9.3-postgis-2.1
+  - sudo su - postgres -c 'psql -c "create role round superuser login;"'
+  - sudo su - postgres -c 'psql -c "create database roundware"'
+  - sudo su - postgres -c 'psql -c "grant all on database roundware to round"'
+  - sudo su - postgres -c "psql -c \"alter user round password 'round'\""
+  - sudo su - postgres -c "psql roundware -c 'create extension postgis'"
   - pip install -r requirements/dev.txt
 before_script:
 # Setup Roundware log file.
