--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: python
 python:
   - "2.7"
 before_install:
-  - sudo apt-get update
-  - sudo apt-get upgrade
+  - sudo apt-get -y update
+  - sudo apt-get -y upgrade
 install:
-  - sudo apt-get install python-dev build-essential python-dbus python-gst0.10 postgresql-server-dev-9.3 postgresql-9.3-postgis-2.1
+  - sudo apt-get -y install python-dev build-essential python-dbus python-gst0.10 postgresql-server-dev-9.3 postgresql-9.3-postgis-2.1
   - sudo su - postgres -c 'psql -c "create role round superuser login;"'
   - sudo su - postgres -c 'psql -c "create database roundware"'
   - sudo su - postgres -c 'psql -c "grant all on database roundware to round"'
