--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,22 @@ language: python
 addons:
   postgresql: "9.3"
 dist: trusty
+sudo: required
+services:
+  postgresql
+
 python:
   - "2.7"
 before_install:
   - sudo apt-get -y update
 install:
-  - sudo apt-get -y install libgdal-dev
   - pip install fiona
-  - sudo apt-get -y install python-dev build-essential python-dbus python-gst0.10 postgresql-server-dev-9.3 postgresql-9.3-postgis-2.3
-  - sudo su - postgres -c 'psql -c "create role round superuser login;"'
-  - sudo su - postgres -c 'psql -c "create database roundware"'
-  - sudo su - postgres -c 'psql -c "grant all on database roundware to round"'
-  - sudo su - postgres -c "psql -c \"alter user round password 'round'\""
-  - sudo su - postgres -c "psql roundware -c 'create extension postgis'"
+  - sudo apt-get -y install python-dev build-essential python-dbus python-gst0.10
+  - psql -c "create role round superuser login;"'  -U postgres
+  - psql -c "create database roundware"'  -U postgres
+  - psql -c "grant all on database roundware to round"'  -U postgres
+  - psql -c "alter user round password 'round';"  -U postgres
+  - psql roundware -c 'create extension postgis;' -U postgres
   - pip install -r requirements/dev.txt
   - sudo apt-get install --reinstall python-setuptools
 before_script:
