--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ before_install:
 install:
   - pip install fiona
   - sudo apt-get -y install python-dev build-essential python-dbus python-gst0.10
-  - psql -c "create role round superuser login;"'  -U postgres
-  - psql -c "create database roundware"'  -U postgres
-  - psql -c "grant all on database roundware to round"'  -U postgres
+  - psql -c "create role round superuser login;"  -U postgres
+  - psql -c "create database roundware;" -U postgres
+  - psql -c "grant all on database roundware to round;"  -U postgres
   - psql -c "alter user round password 'round';"  -U postgres
-  - psql roundware -c 'create extension postgis;' -U postgres
+  - psql roundware -c "create extension postgis;" -U postgres
   - pip install -r requirements/dev.txt
   - sudo apt-get install --reinstall python-setuptools
 before_script:
