--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,29 @@ addons:
   postgresql: "9.3"
 dist: trusty
 sudo: required
-services:
-  postgresql
 
 python:
   - "2.7"
+
 before_install:
   - sudo apt-get -y update
+
 install:
   - pip install fiona
   - sudo apt-get -y install python-dev build-essential python-dbus python-gst0.10
+  - pip install -r requirements/dev.txt
+  - sudo apt-get install --reinstall python-setuptools
+
+before_script:
+  - sudo /etc/init.d/postgresql stop
+  - sudo /etc/init.d/postgresql start 9.3
+
   - psql -c "create role round superuser login;"  -U postgres
   - psql -c "create database roundware;" -U postgres
   - psql -c "grant all on database roundware to round;"  -U postgres
   - psql -c "alter user round password 'round';"  -U postgres
   - psql roundware -c "create extension postgis;" -U postgres
-  - pip install -r requirements/dev.txt
-  - sudo apt-get install --reinstall python-setuptools
-before_script:
+
 # Setup Roundware log file.
   - sudo touch /var/log/roundware
   - sudo chmod 777 /var/log/roundware
@@ -28,4 +33,5 @@ before_script:
   - sudo mkdir /var/www
   - sudo chmod 777 /var/www
   - export PYTHONPATH=.:/usr/lib/python2.7/dist-packages/
+
 script: python roundware/manage.py test --settings=roundware.settings.testing
