--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: python
 addons:
   postgresql: "9.3"
+  apt:
+    - postgresql-9.3-postgis-2.3
+    - python-dev
+    - build-essential
+    - python-dbus
+    - python-gst0.10
+    - python-setuptools
+
 dist: trusty
 sudo: required
 
@@ -12,9 +20,7 @@ before_install:
 
 install:
   - pip install fiona
-  - sudo apt-get -y install python-dev build-essential python-dbus python-gst0.10
   - pip install -r requirements/dev.txt
-  - sudo apt-get install --reinstall python-setuptools
 
 before_script:
   - sudo /etc/init.d/postgresql stop
