--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
   - sudo apt-get -y update
 
 install:
+  - pip install setuptools pip --upgrade
   - pip install -r requirements/dev.txt --upgrade
 
 before_script:
