--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
 
 install:
   - pip install setuptools pip --upgrade
+  - easy_install distribute
   - pip install distribute --upgrade
   - pip install -r requirements/dev.txt --upgrade
 
