trying to install six.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
   - sudo apt-get -y update
 
 install:
+
   - pip install setuptools pip --upgrade
   - easy_install distribute
   - pip install distribute --upgrade
@@ -41,7 +42,9 @@ before_script:
 # Setup rwmedia directory for mock files.
   - sudo mkdir /var/www
   - sudo chmod 777 /var/www
-  - export PYTHONPATH=${PYTHONPATH}:.:/usr/lib/python2.7/dist-packages/
+  - export PYTHONPATH=${PYTHONPATH}:.
+  - pip freeze | grep six
+  - pip install six
   - pip freeze | grep six
 
 script:
