--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_script:
 # Setup rwmedia directory for mock files.
   - sudo mkdir /var/www
   - sudo chmod 777 /var/www
-  - export PYTHONPATH=${PYTHONPATH}:.
+  - export PYTHONPATH=${PYTHONPATH}:.:/usr/lib/python2.7/dist-packages/
   - pip freeze | grep six
   - pip install six
   - pip freeze | grep six
