--- a/.travis.yml
+++ b/.travis.yml
@@ -45,4 +45,4 @@ before_script:
 
 script:
   - echo $PYTHONPATH
-  - python -m roundware/manage.py test --settings=roundware.settings.testing
+  - python -m roundware.manage.py test --settings=roundware.settings.testing
