let django handle the static media url more directly for assets; remove overwrought process detection from add-test-audio script, but then consider that it may be totally defunct anyway; use official postgis image

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,7 +16,7 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: mdillon/postgis:12
+        image: postgis/postgis:12-3.0
         ports:
           # will assign a random free host port
           - 5432:5432
